dalszy layoutu - bootstrap

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<div class="center hero-unit">
 <h1>FINALDO - wiesz ile masz :)</h1>
 	<p>
 		Póki co odwiedź naszego
@@ -6,4 +7,4 @@
 	<p>
 		<a href="#">Zarejestruj sie !</a>
 	</p>
-
+</div>
