--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,12 @@
 		
 		<%= render "layouts/header"%>
 		
-		<%= yield %>
+		<div class="container">
+			<%= yield %>		
+			<%= render "layouts/footer"%>
+		</div>
+		
 
-		<%= render "layouts/footer"%>
 		
 	</body>
 </html>
