--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,9 +1,17 @@
+//$navbarBackgroundHighlight: white;
+//$navbarBackground: white;
+$btnPrimaryBackground: purple;
+
 @import 'bootstrap';
 
 body{
     padding-top: 60px;
 }
 @import 'bootstrap-responsive';
+.navbar-inner{
+    @include box-shadow(none !important);
+    border: 0;
+}
 
 .footer{
     margin-top: 50px;
