--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,17 +10,23 @@
     </a>
      
     <!-- Be sure to leave the brand out there if you want it shown -->
-    <a class="brand" href="#">Finaldo</a>
+
+    <%= link_to "Finaldo", root_path, class: "brand" %>
      
     <!-- Everything you want hidden at 940px or less, place within here -->
     <div class="nav-collapse collapse">
 	    <!-- .nav, .navbar-search, .navbar-form, etc -->
 	    <ul class="nav">
-	    	<li><%= link_to "Home", root_path%></li>
-			<li><%= link_to "About", about_path%></li>
+	    	<li><%= link_to "Home", root_path %></li>
+			<li><%= link_to "O nas", about_path %></li>
 		</ul>
 		<ul class="nav pull-right">
-	    	<li><%= link_to "Zaloguj się", root_path%></li>
+			<% if user_signed_in? %>
+				<li><%= link_to "Edytuj profil", edit_user_registration_path %></li>
+				<li><%= link_to "Wyloguj się", destroy_user_session_path, method: :delete %></li>
+			<% else %>
+	    		<li><%= link_to "Zaloguj się", new_user_session_path %></li>
+			<% end %>
 		</ul>
     </div>
      
