--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,17 +4,13 @@
   <%= f.error_notification %>
 
   <%= f.input :email %>
-  <%= f.input :password, label: "New Password", autocomplete: "off" %>
-  <%= f.input :password_confirmation, label: "New Password Confirmation", autocomplete: "off" %>
-  <%= f.input :current_password %>
+  <%= f.input :password, label: "Nowe hasło", autocomplete: "off" %>
+  <%= f.input :password_confirmation, label: "Powtórz nowe hasło", autocomplete: "off" %>
+  <%= f.input :current_password, label: "Stare hasło"%>
 
   <div class="form-actions">
-    <%= f.submit "Update", class: "btn btn-primary"%>
+    <%= f.submit "Uaktualnij", class: "btn btn-primary"%>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
-
-<%= link_to "Back", :back %>
+<p><%= link_to "Usuń moje konto", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
