--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,14 +1,14 @@
-<h2>Zarejestruj się</h2>
+<h2>Rejestracja użytkownika</h2>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: 'form-horizontal'}) do |f| %>
   <%= f.error_notification %>
 
   <%= f.input :email %>
-  <%= f.input :password %>
-  <%= f.input :password_confirmation %>
+  <%= f.input :password , label: "Hasło"%>
+  <%= f.input :password_confirmation , label: "Powtórz hasło"%>
 
   <div class="form-actions">
-    <%= f.submit "Sign up", class: "btn btn-primary" %>
+    <%= f.submit "Zarejestruj", class: "btn btn-primary" %>
   </div>
 <% end %>
 
