--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,15 +1,15 @@
 
-    <h1>Listing instruments</h1>
+    <h1>Moje instrumenty finansowe</h1>
 
     <table class="table table-striped">
         <thead>
             <tr>
-			    <th>Name</th>
-			    <th>Shortname</th>
-			    <th>Amount</th>
-			    <th>Value</th>
-			    <th>Buydate</th>
-			    <th>InstrumentType</th>
+			    <th>Nazwa</th>
+			    <th>Skrót</th>
+			    <th>Ilość</th>
+			    <th>Wartość</th>
+			    <th>Data zakupu</th>
+			    <th>Typ</th>
                 <th></th>
                 <th></th>
                 <th></th>
@@ -23,4 +23,4 @@
 
 <br />
 
-<%= link_to 'New Instrument', new_instrument_path %>
+<%= link_to 'Nowy instrument finansowy', new_instrument_path %>
