--- a/app/views/instruments/_form.html.erb
+++ b/app/views/instruments/_form.html.erb
@@ -2,18 +2,21 @@
   <%= f.error_notification %>
 
   <div class="form-inputs"> 
-  	<%= f.input :instrumentType, label: "Typ waloru", :collection => [["Waluta",1],["Lokata", 2],["Akcja",3],["Fundusz inwestycyjny",4],["Oblibacja",5], ["Bon skarbowy",6]], :selected => 3 %>
+  	<%= f.input :instrumentType, :input_html => {:onchange => 'myFunction()'}, label: "Typ waloru", :collection => [["Waluta",1],["Lokata", 2],["Akcja",3],["Fundusz inwestycyjny",4],["Oblibacja",5], ["Bon skarbowy",6]], :selected => 3 %>
     <%= f.input :name, label: "Nazwa" %>
-    <%= f.input :shortname, label: "Skrót" %>
+    <div id="aaa"><%= f.input :shortname, label: "Skrót"%></div>
     <%= f.input :amount, label: "Liczba jednostek" %>
     <%= f.input :value, label: "Wartość jednostki" %>
     <%= f.input :buydate, label: "Data zakupu" %>
     <%= f.input :capitalisation, label: "Kapitalizacja", :collection => [["Dzienna",365],["Miesięczna",12],["Kwartalna",4],["Roczna",1]] %>
     <%= f.input :percent, label: "Procent" %>
-    <%= f.input :period, label: "Okres" %>
+    <%= f.input :period, label: "Okres" ,  :input_html => {:onFocus => 'document.getElementById("aaa").style.visibility="hidden"'} %>
   </div>
 
   <div class="form-actions">
     <%= f.submit "Dodaj walor", class: "btn btn-primary" %>
   </div>
 <% end %>
+
+<p id="p1">This is some text.</p>
+<input type="button" onclick="myFunction()" value="Hide paragraph">
