Instruments-portfolios correct model

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,4 +1,5 @@
 
+    <td><%= link_to 'Dodaj walor', new_portfolio_instrument_path %></td>
     <h1>Moje instrumenty finansowe</h1>
 
     <table class="table table-striped">
@@ -17,10 +18,7 @@
         </thead>
 
         <tbody>
-        	
         </tbody>
     </table>
 
 <br />
-
-
