chec wyswietlenia instrumentow z portfela

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,5 +1,4 @@
 
-    <td><%= link_to 'Dodaj walor', new_portfolio_instrument_path %></td>
     <h1>Moje instrumenty finansowe</h1>
 
     <table class="table table-striped">
@@ -18,7 +17,12 @@
         </thead>
 
         <tbody>
+        	
+        	
+	        	<% @portfolios.each do |portfolio|  %>
+	    			<%= render portfolio.instruments %>
+				<% end %>
         </tbody>
     </table>
-
+				<%= link_to 'Nowy instrument finansowy', new_portfolio_instrument_path %>
 <br />
