Form for nested resources - beginning :)

--- a/app/views/instruments/_form.html.erb
+++ b/app/views/instruments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@instrument, html: { class: "form-horizontal"}) do |f| %>
+<%= simple_form_for([@portfolio,@instrument], html: { class: "form-horizontal"}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs"> 
