--- a/app/views/instruments/edit.html.erb
+++ b/app/views/instruments/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @instrument %> |
-<%= link_to 'Back', instruments_path %>
+<%#<%= link_to 'Back', instruments_path %>%>
