--- a/app/views/instruments/show.html.erb
+++ b/app/views/instruments/show.html.erb
@@ -5,19 +5,19 @@
 			<p>
 			  <%= @instrument.name %>
 			</p>
-			
+
 			<p>
 			  <%= @instrument.shortname %>
 			</p>
-			
+
 			<p>
 			  <%= @instrument.amount %>
 			</p>
-			
+
 			<p>
 			  <%= @instrument.value %>
 			</p>
-			
+
 			<p>
 			  <%= @instrument.buydate %>
 			</p>
@@ -25,8 +25,8 @@
 			  <%= @instrument.instrumentType %>
 			</p>
 
-				<%= link_to 'Edit', edit_instrument_path(@instrument) %> |
-				<%= link_to 'Back', instruments_path %>
+				<%#<%= link_to 'Edit', edit_instrument_path(@instrument) %> |%>
+				<%#<%= link_to 'Back', instruments_path %>%>
         </div>
     </div>
 </div>
