--- a/app/views/instruments/edit.html.erb
+++ b/app/views/instruments/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @instrument %> |
+<%#= link_to 'Show', @instrument %> |
 <%#<%= link_to 'Back', instruments_path %>%>
