--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -17,19 +17,10 @@
         </thead>
         <tbody>
           <% @portfolios.each do |portfolio|  %>
-            <%= render portfolio.instruments %>
+             <%#= render portfolio.instruments, locals: {portfolio: @portfolio} %>
+             <%= render partial: "instruments/instrument", collection: portfolio.instruments, locals: {portfolio: portfolio} %>
           <% end %>
         </tbody>
     </table>
-    # Ten link poniżej nie może działać, bo nie ma przekazanego id portfela,
-    # przeklejam wpis z rake routes
-    # new_portfolio_instrument GET    /portfolios/:portfolio_id/instruments/new(.:format)      instruments#new
-    <%#<%= link_to 'Nowy instrument finansowy', new_portfolios_instrument_path %>
-    # link nie działa, bo nie ma przekazanego portfolio id, ale coś takiego już
-    # beðzie ok:
-    <%= link_to 'Nowy instrument finansowy', new_portfolio_instrument_path(@portfolios.first) %>
-    # metda #first weźmie nam pierwszy element z koleckcji @portfolios, czyli
-    # będzie to obiekt typu Portfolio
-    #
-    # Ponadto była literówka :)
+    <%= link_to 'Nowy instrument finansowy', new_portfolio_instrument_path(@portfolios.first) %>    
 <br />
