--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -5,14 +5,15 @@
         <thead>
             <tr>
 			    <th>Nazwa</th>
-			    <th>Skrót</th>
-			    <th>Ilość</th>
+			    <th>Nazwa przyjazna</th>
+			    <th>Opis</th>
+          <th>Ilość jednostek</th>
 			    <th>Wartość</th>
 			    <th>Data zakupu</th>
+
 			    <th>Typ</th>
-                <th></th>
-                <th></th>
-                <th></th>
+          <th></th>
+          <th></th>
             </tr>
         </thead>
         <tbody>
