--- a/app/views/instruments/_instrument.html.erb
+++ b/app/views/instruments/_instrument.html.erb
@@ -1,12 +1,17 @@
   <tr>
     <td><%= instrument.name %></td>
-    <td><%= instrument.shortname %></td>
-    <td><%= instrument.amount %></td>
-    <td><%= instrument.value %></td>
-    <td><%= instrument.buydate %></td>
-    <td><%#= instrument.instrumentType %></td>
-    <td><%#= link_to 'Pokaż', instrument %></td>
+    <td><%= instrument.friendly_name %></td>
+    <td><%= instrument.description %></td>
+    <td><%= instrument.units %></td>
+    <td><%= instrument.begin_value %></td>
+    <td><%= instrument.buy_date %></td>
+    <td><%= instrument.type %></td> 
     <td><%= link_to 'Edytuj', edit_portfolio_instrument_path(portfolio,instrument) %></td>
-        <td><%#= link_to 'Edytuj', edit_portfolio_path(portfolio) %></td>
     <td><%= link_to 'Usuń', portfolio_instrument_path(portfolio,instrument), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    
+
+    <!--<td><%#= instrument.instrumentType %></td>
+    <td><%#= link_to 'Pokaż', instrument %></td>
+
+        <td><%#= link_to 'Edytuj', edit_portfolio_path(portfolio) %></td -->
   </tr>
