--- a/app/views/instruments/_form.html.erb
+++ b/app/views/instruments/_form.html.erb
@@ -1,11 +1,14 @@
-<%= simple_form_for([@portfolio, @instrument], html: { class: "form-horizontal"}) do |f| %>
+<%= simple_form_for([@portfolio, @instrument], :url => portfolio_instrument_path, html: { class: "form-horizontal"}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
   	<%= f.input :type, label: "Typ waloru", :collection => Instrument::DICT, 
     :label_method => :last, :value_method => :first, prompt: false %>
     <%= f.input :name, label: "Nazwa" %>
+    <%= f.input :friendly_name, label: "Nazwa skrótowa" %>
+    <%= f.input :description, label: "Opis", :input_html => { :cols => 15, :rows => 5 } %>
     <%= f.input :units, label: "Liczba jednostek" %>
+    <%= f.input :interest_rate, label: "Oprocentowanie" %> 
     <%= f.input :begin_value, label: "Wartość jednostki" %>
     <%= f.input :buy_date, label: "Data zakupu" %>
     <%= f.input :capitalisation, label: "Kapitalizacja", :collection => [["Dzienna",365],["Miesięczna",12],["Kwartalna",4],["Roczna",1]] %>
@@ -15,6 +18,3 @@
     <%= f.submit "Dodaj walor", class: "btn btn-primary" %>
   </div>
 <% end %>
-
-<p id="p1">This is some text.</p>
-<input type="button" onclick="myFunction()" value="Hide paragraph">
